# coprocessor-operation-recording

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docs.yaml  example_config.yaml  example_report.csv  knope.toml
.changeset/: initial_release.md
.github/workflows/: release.yml
src/: handler.rs  main.rs  reporter.rs
src/config/: mod.rs
